[package]
name = "tbla"
version = "0.2.0"
edition = "2021"
description = """
tbla is a terminal spreadsheet editor with standard keyboard and mouse
operation. Familiar shortcuts (arrows, Tab, Enter, Ctrl+C/V/S, F2),
click/drag/scroll, a menu bar, right-click context menus, Excel-style
point-mode formula reference selection, and CJK/IME support out of the box.
"""
authors = [""]
license = "MIT"
keywords = ["spreadsheet", "terminal", "tui", "editor", "excel"]
categories = ["command-line-utilities"]
repository = "https://github.com/fukuyori/tbla"

[dependencies]
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-width = "0.1"
arboard = "3.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
