[package]
name = "tbla"
version = "0.3.2"
edition = "2021"
description = """
tbla is a terminal spreadsheet editor with standard keyboard and mouse
operation. Familiar shortcuts (arrows, Tab, Enter, Ctrl+C/V/S, F2),
click/drag/scroll, a menu bar, right-click context menus, Excel-style
point-mode formula reference selection, and CJK/IME support out of the box.
"""
authors = [""]
license = "MIT"
keywords = ["spreadsheet", "terminal", "tui", "editor", "excel"]
categories = ["command-line-utilities"]
repository = "https://github.com/fukuyori/tbla"

[dependencies]
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-width = "0.1"
arboard = "3.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
calamine = "0.30"
rust_xlsxwriter = "0.92"
encoding_rs = "0.8"
# Used to hand-parse xl/styles.xml + sheet XML for cell formatting on read
# (calamine only exposes values & formulas). Aligned with the versions
# calamine already pulls in to avoid duplicate compilation.
zip = { version = "4", default-features = false, features = ["deflate"] }
quick-xml = "0.37"
# Polars DataFrame view: typed columns for large analytical data.
# Phase 1 uses csv/strings/dtype-full for type inference and value formatting.
polars = { version = "0.53", default-features = false, features = ["lazy", "csv", "strings", "dtype-full", "fmt", "sql", "parquet", "new_streaming"] }
